--- a/src/Activities.css
+++ b/src/Activities.css
@@ -1,194 +1,181 @@
-/* General Page Setup */
-html, body {
+/* === Reset === */
+* {
   margin: 0;
   padding: 0;
-  width: 1440px;
-  height: 1024px;
-  background-color: #FFFFFF;
-  font-family: 'Montserrat', sans-serif;
-  overflow: hidden;
-  position: relative;
+  box-sizing: border-box;
 }
 
-/* Header Diagonal Bar */
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #ffffff;
+  overflow: auto; /* Ensure scroll */
+}
+
+/* === Page Wrapper === */
+.welcome-page {
+  position: relative;
+  width: 1440px;
+  height: auto; /* allow height to grow */
+  min-height: 1024px;
+  margin: 0 auto;
+  background: #FFFFFF;
+}
+
+/* === Header Bar (Diagonal Style) === */
 .header-bar {
   position: absolute;
-  width: 1440px;
-  height: 31.44px;
   top: 0;
   left: 0;
-  z-index: 3;
-  transform: matrix(-1, 0, 0, 1, 0, 0);
+  width: 1440px;
+  height: 31.44px;
+  z-index: 10;
+  display: flex;
 }
 
-.header-bar::before {
-  content: "";
-  position: absolute;
+.header-bar .blue {
   width: 720px;
-  height: 31.44px;
-  right: 720px;
-  top: 0;
+  height: 100%;
   background: #1B577E;
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
-.header-bar::after {
-  content: "";
-  position: absolute;
+.header-bar .orange {
   width: 744.67px;
-  height: 31.44px;
-  left: 695.33px;
-  top: 0;
+  height: 100%;
   background: #EB5617;
   transform: matrix(-1, 0, 0, 1, 0, 0);
 }
 
-/* Logo */
+/* === Logo === */
 .welcome-logo {
   position: absolute;
   width: 181.76px;
   height: 160.19px;
   left: 116.27px;
   top: 68.99px;
-  background: url('../assets/image19.png') no-repeat center;
+  background-image: url('../assets/image19.png');
   background-size: contain;
+  background-repeat: no-repeat;
   z-index: 5;
 }
 
-/* Watermark */
-.welcome-bg-image {
+/* === Watermark Background === */
+.watermark {
   position: absolute;
   width: 496.49px;
   height: 437.58px;
-  left: calc(50% - 496.49px/2);
-  top: calc(50% - 437.58px/2);
-  background: url('../assets/image19.png') no-repeat center;
+  left: calc(50% - 496.49px / 2);
+  top: calc(50% - 437.58px / 2);
+  background-image: url('../assets/image19.png');
   background-size: contain;
-  opacity: 0.5;
-  z-index: 0;
+  background-repeat: no-repeat;
+  opacity: 0.06;
   pointer-events: none;
+  z-index: 0;
 }
 
-/* Main Container Box */
-.activities-container {
+/* === Activity Container === */
+.activities-box {
   position: absolute;
   width: 778.52px;
-  height: 864.68px;
-  left: 330.74px;
+  height: auto;
   top: 106.6px;
-  background: #FFFFFF;
+  left: 330.74px;
+  background: white;
   border: 0.5px solid #2C51A1;
-  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 5.93px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
-  padding-top: 80px;
+  padding: 40px 30px;
+  z-index: 2;
 }
 
-/* Title: Actividades */
+/* === Title === */
 .activities-title {
-  position: absolute;
-  width: 206px;
-  height: 41px;
-  left: calc(50% - 206px/2 - 31.57px);
-  top: 139.08px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 34px;
   line-height: 41px;
   color: #EE581B;
+  text-align: center;
+  margin-bottom: 32px;
 }
 
-/* Row Labels */
+/* === Row Header === */
 .activities-row-header {
-  position: absolute;
-  top: 208.74px;
-  left: 419.63px;
-  width: 600.74px;
   display: flex;
   justify-content: space-between;
   font-weight: 600;
   font-size: 24px;
   color: #1B577E;
+  margin-bottom: 16px;
 }
 
-/* Divider Line */
+.activities-row-header div {
+  flex: 1;
+  text-align: center;
+}
+
+/* === Divider Line === */
 .activities-divider {
-  position: absolute;
-  top: 250.76px;
-  left: 419.63px;
-  width: 600.74px;
-  border-top: 1px solid #1B5680;
+  height: 1px;
+  width: 100%;
+  background-color: #1B5680;
+  margin-bottom: 16px;
 }
 
-/* Activity Row Structure */
+/* === Activity Rows === */
 .activity-row {
-  position: absolute;
-  width: 674.47px;
-  height: 45px;
-  left: 351px;
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 
-/* Row Inner Content */
 .activity-icon {
   width: 54px;
   height: 45px;
-  background: url('../assets/image.png') no-repeat center;
+  background-image: url('../assets/image.png');
   background-size: contain;
+  background-repeat: no-repeat;
+  margin-right: 12px;
 }
 
-.activity-name,
-.activity-duration,
-.activity-status {
+.activity-name, .activity-duration, .activity-status {
+  font-family: 'Montserrat', sans-serif;
   font-size: 18.06px;
-  font-weight: 500;
+  flex: 1;
   line-height: 40px;
-  color: #333333;
   text-align: justify;
+  color: #333333;
 }
 
-/* Status Colors */
 .activity-status.ok {
   color: #00B050;
+  font-weight: 600;
 }
 
 .activity-status.pending {
   color: #FF0000;
+  font-weight: 600;
 }
 
-/* Exit Button */
+/* === Exit Button === */
 .exit-button {
-  position: absolute;
-  width: 218px;
-  height: 42px;
-  left: calc(50% - 218px / 2);
-  top: 894.58px;
-  background: #1B5680;
-  border-radius: 12px;
-  font-weight: 700;
-  font-size: 18px;
-  color: #FEE9E7;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 24px auto 0;
+  padding: 12px 32px;
+  background-color: #1B5680;
+  border-radius: 12px;
+  color: #FEE9E7;
+  font-weight: 700;
+  font-size: 18px;
   cursor: pointer;
+  transition: background-color 0.2s ease;
 }
 
-/* Utility for each row top position */
-.row-1 { top: 271.17px; }
-.row-2 { top: 333.17px; }
-.row-3 { top: 395.17px; }
-.row-4 { top: 457.17px; }
-.row-5 { top: 519.17px; }
-.row-6 { top: 581.17px; }
-.row-7 { top: 643.17px; }
-.row-8 { top: 705.17px; }
-.row-9 { top: 767.17px; }
-.row-10 { top: 829.17px; }
-
-/* Optional: Responsive (only if needed) */
-@media screen and (max-width: 1440px) {
-  body {
-    transform: scale(0.9);
-    transform-origin: top left;
-  }
+.exit-button:hover {
+  background-color: #0f2d4d;
 }
