--- a/src/Activities.css
+++ b/src/Activities.css
@@ -79,28 +79,75 @@ html, body {
 /* === Activity Container === */
 .activities-box {
   position: absolute;
-  width: 778.52px;
-  height: auto;
+  width: 778.5224609375px;
+  height: 864.6776123046875px;
   top: 106.6px;
   left: 330.74px;
-  background: white;
+
+  background-color: #ffffff;
   border: 0.5px solid #2C51A1;
-  box-shadow: 0px 0px 5.93px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 5.93385px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
+  opacity: 1;
+  transform: rotate(0deg);
+
   padding: 40px 30px;
   z-index: 2;
 }
 
+
 /* === Title === */
-.activities-title {
+/* Actividad (1st column) */
+.actividad-title {
+  position: absolute;
+  width: 118px;
+  height: 29px;
+  left: calc(50% - 118px / 2 - 238.03px);
+  top: 208.74px;
+
   font-family: 'Montserrat', sans-serif;
+  font-style: normal;
   font-weight: 600;
-  font-size: 34px;
-  line-height: 41px;
-  color: #EE581B;
-  text-align: center;
-  margin-bottom: 32px;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: #1B577E;
 }
+
+/* Duración (2nd column) */
+.duration-title {
+  position: absolute;
+  width: 113px;
+  height: 29px;
+  left: calc(50% - 113px / 2 + 15.47px);
+  top: 208.74px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: #1B577E;
+}
+
+/* Avance (3rd column) */
+.avance-title {
+  position: absolute;
+  width: 91px;
+  height: 29px;
+  left: calc(50% - 91px / 2 + 257.47px);
+  top: 208.74px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
+
+  color: #1B577E;
+}
+
 
 /* === Row Header === */
 .activities-row-header {
