--- a/src/Activities.css
+++ b/src/Activities.css
@@ -147,29 +147,19 @@ html, body {
 .activity-name {
   font-family: 'Montserrat', sans-serif;
   font-size: 18.06px;
-  flex: 2; /* Give more space for wrapping */
-  line-height: 22px; /* Tighter line-height for better wrapping */
-  text-align: left; /* Align to left for readability */
+  flex: 2;
+  line-height: 22px;
+  text-align: left;
   color: #333333;
   margin-right: 40px;
+  white-space: normal;
   word-wrap: break-word;
-  white-space: normal; /* Allow wrapping */
 }
 
-
-.activity-duration {
+.activity-duration, .activity-status {
   font-size: 18.06px;
-  flex: 0.5;
-  margin-right: 40px; /* Adds space between duration and status */
-  text-align: justify;
-  color: #333333;
-}
-
-.activity-status {
-  font-size: 18.06px;
-  flex: 0.5;
-  text-align: justify;
-  font-weight: 600;
+  flex: 1;
+  text-align: center;
 }
 
 
