--- a/src/balloonintro.css
+++ b/src/balloonintro.css
@@ -1,137 +1,143 @@
-/* === Page Wrapper === */
+/* Full Page Layout */
 .balloon-page {
   position: relative;
   width: 1440px;
   height: 1024px;
-  background: #FFFFFF;
-  margin: 0 auto;
+  background: #ffffff;
   overflow: hidden;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* === Top Bar === */
+/* Header Bar (2-color split) */
 .header-bar {
   position: absolute;
-  top: 0;
-  left: 0;
   width: 1440px;
   height: 31.44px;
+  top: 0;
+  left: 0;
   display: flex;
-}
-
-.header-bar::before,
-.header-bar::after {
-  content: '';
-  height: 100%;
+  z-index: 10;
 }
 
 .header-bar::before {
-  flex: 0 0 720px;
+  content: '';
+  width: 720px;
   background: #1B577E;
 }
 
 .header-bar::after {
-  flex: 1;
+  content: '';
+  width: 720px;
   background: #EB5617;
 }
 
-/* === Watermark Image (background) === */
+/* Watermark (centered, faded image) */
 .watermark-image {
   position: absolute;
   width: 496.49px;
   height: 437.58px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  left: calc(50% - 248.25px); /* half width */
+  top: calc(50% - 218.79px);
   background-size: contain;
   background-repeat: no-repeat;
   opacity: 0.5;
-  pointer-events: none;
-  z-index: 1;
+  z-index: 0;
 }
 
-/* === Logo Image (top left) === */
+/* Top-left Logo */
 .logo-image {
   position: absolute;
   width: 181.76px;
   height: 160.19px;
-  top: 68.99px;
   left: 116.27px;
+  top: 68.99px;
   background-size: contain;
   background-repeat: no-repeat;
   z-index: 2;
 }
 
-/* === Content Box === */
+/* Content Box */
 .balloon-box {
   position: absolute;
   width: 778.52px;
   height: 810.81px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: #FFFFFF;
+  left: calc(50% - 389.26px);
+  top: calc(50% - 405.405px);
   border: 0.5px solid #2C51A1;
   box-shadow: 0px 0px 5.93px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
-  padding: 40px;
-  box-sizing: border-box;
+  background-color: white;
   z-index: 3;
 }
 
-/* === Heading === */
+/* Headline */
 .status-text h2 {
-  font-size: 34px;
+  position: absolute;
+  width: 244px;
+  height: 41px;
+  left: calc(50% - 122px);
+  top: 195.03px;
   font-weight: 600;
+  font-size: 34px;
+  line-height: 41px;
   color: #EE581B;
   text-align: center;
-  margin: 0 0 20px;
 }
 
-/* === Subheading === */
+/* Subheading */
 .status-text h3 {
+  position: absolute;
+  top: 240px;
+  left: calc(50% - 80px);
   font-size: 24px;
   font-weight: 600;
   color: #1B577E;
-  text-align: center;
-  margin-bottom: 20px;
+  z-index: 4;
 }
 
-/* === Game Rules List === */
+/* Game Rules Text */
 .status-text ul {
-  font-size: 18px;
+  position: absolute;
+  width: 600.74px;
+  height: 360px;
+  left: calc(50% - 300.37px);
+  top: 319.42px;
   font-weight: 500;
-  line-height: 1.7;
-  color: #333333;
+  font-size: 24px;
+  line-height: 40px;
   text-align: justify;
+  color: #333333;
+  list-style-type: disc;
   padding-left: 20px;
-  margin-bottom: 40px;
+  z-index: 4;
 }
 
-/* === List Items === */
-.status-text li {
-  margin-bottom: 12px;
-}
-
-/* === Button Group === */
+/* Button */
 .button-group {
+  position: absolute;
+  width: 217.98px;
+  height: 42px;
+  left: calc(50% - 108.99px);
+  top: 762.39px;
+  background: #1B5680;
+  border-radius: 11.96px;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  z-index: 4;
 }
 
 .pump-button {
-  background: #1B5680;
-  color: #FEE9E7;
   font-size: 18px;
   font-weight: 700;
-  padding: 12px 40px;
-  border-radius: 12px;
-  cursor: pointer;
+  color: #FEE9E7;
   user-select: none;
-  transition: background 0.3s ease;
 }
 
-.pump-button:hover {
-  background: #123a5a;
+/* Optional Icon placeholders (not shown) */
+.icon {
+  display: none;
+  width: 25.46px;
+  height: 25.46px;
 }
