--- a/src/balloonintro.css
+++ b/src/balloonintro.css
@@ -1,143 +1,115 @@
-/* Full Page Layout */
+/* Full page layout */
 .balloon-page {
   position: relative;
   width: 1440px;
   height: 1024px;
-  background: #ffffff;
-  overflow: hidden;
+  margin: 0 auto;
+  background: #fff;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* Header Bar (2-color split) */
+/* Top bar - split blue and orange */
 .header-bar {
   position: absolute;
-  width: 1440px;
-  height: 31.44px;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 31px;
   display: flex;
-  z-index: 10;
 }
 
 .header-bar::before {
   content: '';
-  width: 720px;
-  background: #1B577E;
+  width: 50%;
+  background-color: #1B577E;
 }
 
 .header-bar::after {
   content: '';
-  width: 720px;
-  background: #EB5617;
+  width: 50%;
+  background-color: #EB5617;
 }
 
-/* Watermark (centered, faded image) */
-.watermark-image {
-  position: absolute;
-  width: 496.49px;
-  height: 437.58px;
-  left: calc(50% - 248.25px); /* half width */
-  top: calc(50% - 218.79px);
-  background-size: contain;
-  background-repeat: no-repeat;
-  opacity: 0.5;
-  z-index: 0;
-}
-
-/* Top-left Logo */
+/* Logo (top-left) */
 .logo-image {
   position: absolute;
-  width: 181.76px;
-  height: 160.19px;
-  left: 116.27px;
-  top: 68.99px;
-  background-size: contain;
+  width: 182px;
+  height: 160px;
+  left: 116px;
+  top: 69px;
   background-repeat: no-repeat;
-  z-index: 2;
+  background-size: contain;
 }
 
-/* Content Box */
+/* Watermark (center faded image) */
+.watermark-image {
+  position: absolute;
+  width: 496px;
+  height: 437px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+  background-size: contain;
+  opacity: 0.5;
+}
+
+/* Main content box */
 .balloon-box {
   position: absolute;
-  width: 778.52px;
-  height: 810.81px;
-  left: calc(50% - 389.26px);
-  top: calc(50% - 405.405px);
+  width: 778px;
+  height: 811px;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   border: 0.5px solid #2C51A1;
-  box-shadow: 0px 0px 5.93px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
-  background-color: white;
-  z-index: 3;
+  background: #fff;
+  padding: 40px;
+  box-sizing: border-box;
 }
 
-/* Headline */
+/* Title and rules */
 .status-text h2 {
-  position: absolute;
-  width: 244px;
-  height: 41px;
-  left: calc(50% - 122px);
-  top: 195.03px;
-  font-weight: 600;
   font-size: 34px;
-  line-height: 41px;
+  font-weight: 600;
   color: #EE581B;
+  margin-bottom: 20px;
   text-align: center;
 }
 
-/* Subheading */
 .status-text h3 {
-  position: absolute;
-  top: 240px;
-  left: calc(50% - 80px);
   font-size: 24px;
   font-weight: 600;
-  color: #1B577E;
-  z-index: 4;
+  margin-bottom: 16px;
+  color: #333;
+  text-align: center;
 }
 
-/* Game Rules Text */
 .status-text ul {
-  position: absolute;
-  width: 600.74px;
-  height: 360px;
-  left: calc(50% - 300.37px);
-  top: 319.42px;
-  font-weight: 500;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 40px;
   text-align: justify;
-  color: #333333;
-  list-style-type: disc;
+  color: #333;
   padding-left: 20px;
-  z-index: 4;
 }
 
 /* Button */
 .button-group {
-  position: absolute;
-  width: 217.98px;
-  height: 42px;
-  left: calc(50% - 108.99px);
-  top: 762.39px;
-  background: #1B5680;
-  border-radius: 11.96px;
   display: flex;
   justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  z-index: 4;
+  margin-top: 40px;
 }
 
 .pump-button {
+  background-color: #1B5680;
+  color: #FEE9E7;
   font-size: 18px;
   font-weight: 700;
-  color: #FEE9E7;
-  user-select: none;
-}
-
-/* Optional Icon placeholders (not shown) */
-.icon {
-  display: none;
-  width: 25.46px;
-  height: 25.46px;
+  padding: 12px 24px;
+  border-radius: 12px;
+  cursor: pointer;
+  width: 220px;
+  text-align: center;
 }
